--- a/index.html
+++ b/index.html
@@ -40,22 +40,34 @@
         <div id="helpBackdrop" class="modal-backdrop" aria-hidden="true"></div>
         <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="helpTitle">
             <div class="modal-header">
-                <div id="helpTitle" class="modal-title">ホーム画面に追加</div>
+                <div id="helpTitle" class="modal-title">使い方</div>
                 <button id="helpCloseBtn" class="modal-close" type="button" aria-label="Close">閉じる</button>
             </div>
             <div class="modal-body">
                 <div class="modal-section">
-                    <div class="modal-label">iPhone（Safari）</div>
-                    <ol>
-                        <li>Safari で <strong>index.html</strong> を開く</li>
-                        <li>共有ボタン →「ホーム画面に追加」</li>
+                    <div class="modal-label">アプリの使い方</div>
+                    <ol class="modal-list">
+                        <li>https://suzuking001.github.io/rap_time/ をブラウザで開きます</li>
+                        <li>スタート で計測開始</li>
+                        <li>ラップ でラップを記録（現在ラップが 0 に戻ります）</li>
+                        <li>ストップ で停止</li>
+                        <li>リセット で全クリア</li>
+                        <li>CSV出力 でラップ一覧を CSV ダウンロード</li>
+                    </ol>
+                </div>
+                <div class="modal-section">
+                    <div class="modal-label">iPhone（Safari）でホーム画面に追加</div>
+                    <ol class="modal-list">
+                        <li>Safari で https://suzuking001.github.io/rap_time/ を開く</li>
+                        <li>画面下の共有ボタン（四角から上矢印）をタップ</li>
+                        <li>「ホーム画面に追加」を選択</li>
                         <li>追加後はホーム画面のアイコンから起動</li>
                     </ol>
                 </div>
                 <div class="modal-section">
-                    <div class="modal-label">Android（Chrome）</div>
-                    <ol>
-                        <li>Chrome で <strong>index.html</strong> を開く</li>
+                    <div class="modal-label">Android（Chrome）でホーム画面に追加</div>
+                    <ol class="modal-list">
+                        <li>Chrome で https://suzuking001.github.io/rap_time/ を開く</li>
                         <li>右上メニュー →「ホーム画面に追加」または「アプリをインストール」</li>
                         <li>追加後はホーム画面のアイコンから起動</li>
                     </ol>
@@ -63,7 +75,7 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
 
