--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <link rel="icon" type="image/svg+xml" href="assets/icon.svg">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/icon-512.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icon-180.png">
-    <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#ff6b35">
     <title>サイクルタイム測定ウォッチ</title>
+    <script>
+        if (location.protocol === "http:" || location.protocol === "https:") {
+            const link = document.createElement("link");
+            link.rel = "manifest";
+            link.href = "manifest.webmanifest";
+            document.head.appendChild(link);
+        }
+    </script>
 </head>
 <body>
     <div id="container">
